Fixes and update unit tests